--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,7 +12,7 @@
 
       <a class="sidebar-nav-item{% if page.url == '/' %} active{% endif %}" href="{{ site.baseurl }}/">Home</a>
 
-      <a class="sidebar-nav-item{% if page.url == '/examples/' %} active{% endif %}" href="{{ site.baseurl }}/examples">Code Examples</a>
+      <a class="sidebar-nav-item{% if page.url == '/examples/' %} active{% endif %}" href="{{ site.baseurl }}/examples">Code & Chapters</a>
 
       <a class="sidebar-nav-item{% if page.url == '/contributors/' %} active{% endif %}" href="{{ site.baseurl }}/contributors">Contributors</a>
 
